Fix a bunch of errors in incremental computation of maximum width and max-element-size that were causing incremental reflow bugs.  b=39683, 217369  r+sr=roc